--- a/speedtest/Makefile
+++ b/speedtest/Makefile
@@ -3,12 +3,13 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=speedtest
 PKG_VERSION:=1.2.0
 PKG_RELEASE:=1
+PKG_LICENSE:=GPL-2.0
 
 include $(INCLUDE_DIR)/package.mk
 
 define Package/speedtest
-  SECTION:=utils
-  CATEGORY:=Utilities
+  SECTION:=net
+  CATEGORY:=Network
   TITLE:=Ookla Speedtest
   DEPENDS:=+libc
 endef
