--- a/speedtest/Makefile
+++ b/speedtest/Makefile
@@ -3,9 +3,9 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=speedtest
 PKG_VERSION:=1.2.0
 PKG_RELEASE:=1
+PKG_ARCH:=$(ARCH)
 PKG_MAINTAINER:=Faiz <faiz007t>
 PKG_LICENSE:=GPL-2.0
-PKG_LICENSE_FILES:=LICENSE
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -14,28 +14,20 @@ define Package/speedtest
   CATEGORY:=Network
   TITLE:=Ookla Speedtest CLI
   URL:=https://www.speedtest.net/apps/cli
-  DEPENDS:=+libc
+  DEPENDS:=+libc +libstdcpp
 endef
 
 define Package/speedtest/description
-  Command line interface for testing network speed using Ookla's Speedtest servers.
-  This package provides the official CLI binary for OpenWrt systems.
+  Official Ookla Speedtest CLI for OpenWrt (aarch64_cortex-a53)
 endef
 
 define Build/Prepare
+    if [ "$(ARCH)" != "aarch64" ]; then \
+        echo "Binary built for aarch64, current ARCH: $(ARCH)"; \
+        exit 1; \
+    fi
     mkdir -p $(PKG_BUILD_DIR)
     $(CP) ./files/* $(PKG_BUILD_DIR)/
-    $(if $(wildcard $(PKG_BUILD_DIR)/usr/bin/speedtest), \
-        chmod +x $(PKG_BUILD_DIR)/usr/bin/speedtest, \
-        $(error Missing speedtest binary in files directory))
-endef
-
-define Build/Configure
-    # No configuration needed for prebuilt binary
-endef
-
-define Build/Compile
-    # Empty section for prebuilt binary
 endef
 
 define Package/speedtest/install
