--- a/speedtest/Makefile
+++ b/speedtest/Makefile
@@ -3,9 +3,9 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=speedtest
 PKG_VERSION:=1.2.0
 PKG_RELEASE:=1
-PKG_ARCH:=$(ARCH)
 PKG_MAINTAINER:=Faiz <faiz007t>
 PKG_LICENSE:=GPL-2.0
+PKG_ARCH:=$(ARCH)
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -18,16 +18,37 @@ define Package/speedtest
 endef
 
 define Package/speedtest/description
-  Official Ookla Speedtest CLI for OpenWrt (aarch64_cortex-a53)
+  Official Ookla Speedtest CLI (aarch64_cortex-a53 optimized)
 endef
 
 define Build/Prepare
+    @echo "Verifying architecture..."
     if [ "$(ARCH)" != "aarch64" ]; then \
         echo "Binary built for aarch64, current ARCH: $(ARCH)"; \
         exit 1; \
     fi
+    
     mkdir -p $(PKG_BUILD_DIR)
     $(CP) ./files/* $(PKG_BUILD_DIR)/
+    
+    @echo "Validating binary..."
+    if [ ! -x "$(PKG_BUILD_DIR)/usr/bin/speedtest" ]; then \
+        echo "Missing executable binary in files directory"; \
+        exit 1; \
+    fi
+endef
+
+define Build/Configure
+    # No configuration needed for prebuilt binary
+endef
+
+define Build/Compile
+    # Empty section for prebuilt binary
+endef
+
+define Build/Clean
+    $(RM) -r $(PKG_BUILD_DIR)
+    $(RM) -r $(BUILD_DIR)/$(PKG_NAME)
 endef
 
 define Package/speedtest/install
